--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,22 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-<body>
-    <h2>All Listings</h2>
+<% layout("/layouts/boilerplate") %>
 
-    <form method="GET" action="/listings/new">
-        <button>Create New Listings</button>
-    </form>
-    
-    <ul>
-       <% for(let listing of allListings) { %>
-            <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
-       <% } %>
-    </ul>
-    
-</body>
-</html>
+    <body>
+
+        <h2>All Listings</h2>
+        <form method="GET" action="/listings/new">
+            <button>Create New Listings</button>
+        </form>
+        <ul>
+            <% for(let listing of allListings) { %>
+                <li><a href="/listings/<%=listing._id%>">
+                        <%= listing.title %>
+                    </a></li>
+                <% } %>
+        </ul>
+    </body>
