--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,26 +1,37 @@
 <% layout("/layouts/boilerplate") %>
 
-    <body>
-        <h2>Listing Deatils :</h2>
-        <ul>
-            <li>
-                <%= listing.title %>
-            </li>
-            <li>
-                <%= listing.description %>
-            </li>
-            <li>&#8377; <%= listing.price.toLocaleString("en-IN") %>
-            </li>
-            <li>
-                <%= listing.location %>
-            </li>
-            <li>
-                <%= listing.country %>
-            </li>
-        </ul>
-        <a href="/listings/<%= listing._id %>/edit">Edit this Listings</a>
-        <br><br>
-        <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-            <button>delete</button>
-        </form>
-    </body>
+<div class="row mt-4">
+  <div class=" col-6 offset-3">
+    <h2>show Deatils :</h2>
+  </div>
+
+  <div class="card col-6 offset-3 show-card">
+    <img
+      src="<%= listing.image %>"
+      class="card-img-top show-img"
+      alt="listing_image"
+    />
+    <div class="card-body">
+      <p class="card-text">
+        <b><%= listing.title %></b> <br />
+        <%= listing.description %> <br />
+        <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> night <br />
+        <%= listing.location %> <br />
+        <%= listing.country %>
+      </p>
+    </div>
+  </div>
+
+  <br />
+  <div class="btns">
+    <a
+      href="/listings/<%= listing._id %>/edit"
+      class="btn btn-dark col-1 offset-3"
+      >Edit</a
+    >
+
+    <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+      <button class="btn btn-dark offset-4">Delete</button>
+    </form>
+  </div>
+</div>
