--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,7 @@
   <div class="col-8 offset-2">
     <br /><br />
     <h2>Create a new listings</h2>
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" novalidate class="needs-validation">
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -12,7 +12,11 @@
           placeholder="Add catchy title"
           type="text"
           class="form-control"
+          required
+          minlength="2"
         />
+        <div class="invalid-feedback">Please provide a title.</div>
+        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <div class="mb-3">
@@ -22,7 +26,10 @@
           placeholder="enter description"
           type="text"
           class="form-control"
+          required
         ></textarea>
+        <div class="invalid-feedback">Please enter a short description</div>
+        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <div class="mb-3">
@@ -40,10 +47,16 @@
           <label for="price" class="form-label">Price</label>
           <input
             name="listing[price]"
-            placeholder="1,899"
+            placeholder="2,999"
             type="number"
             class="form-control"
+            required
+            min="1"
           />
+          <div class="invalid-feedback">
+            Price should be valid min &#8377; 1
+          </div>
+          <div class="valid-feedback">Looks good!</div>
         </div>
 
         <div class="mb-3 col-md-8">
@@ -53,7 +66,10 @@
             placeholder="India"
             type="text"
             class="form-control"
+            required
           />
+          <div class="invalid-feedback">Please enter country name</div>
+          <div class="valid-feedback">Looks good!</div>
         </div>
       </div>
 
@@ -64,7 +80,10 @@
           placeholder="Jaipur, Rajasthan"
           type="text"
           class="form-control"
+          required
         />
+        <div class="invalid-feedback">Please enter location</div>
+        <div class="valid-feedback">Looks good!</div>
       </div>
 
       <button class="btn btn-dark mb-3 mt-3">Add</button>
