--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,11 +1,11 @@
 <% layout("/layouts/boilerplate") %>
 
 <div class="row mt-4">
-  <div class=" col-6 offset-3">
-    <h2>show Deatils :</h2>
+  <div class="col-6 offset-3">
+    <h3><%= listing.title %></h3>
   </div>
 
-  <div class="card col-6 offset-3 show-card">
+  <div class="card col-6 offset-3 show-card listing-card">
     <img
       src="<%= listing.image %>"
       class="card-img-top show-img"
@@ -13,7 +13,6 @@
     />
     <div class="card-body">
       <p class="card-text">
-        <b><%= listing.title %></b> <br />
         <%= listing.description %> <br />
         <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> night <br />
         <%= listing.location %> <br />
@@ -33,5 +32,61 @@
     <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
       <button class="btn btn-dark offset-4">Delete</button>
     </form>
+  </div>
+
+  <div class="col-6 offset-3">
+    <hr />
+    <h4>Leave a Review</h4>
+    <form
+      action="/listings/<%= listing._id %>/reviews"
+      method="POST"
+      novalidate
+      class="needs-validation"
+    >
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input
+          type="range"
+          min="1"
+          max="5"
+          id="rating"
+          name="review[rating]"
+          class="form-range"
+        />
+      </div>
+      <div>
+        <label for="comment" class="form-label">Comments</label>
+        <textarea
+          name="review[comment]"
+          placeholder="Write a review"
+          id="comment"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please add some comment for review</div>
+        <br />
+      </div>
+      <button class="btn btn-dark">Submit</button>
+    </form>
+    <hr />
+    <p><b>All Reviews</b></p>
+    <div class="row">
+      <% for(review of listing.reviews) { %>
+      <div class="card col-5 ms-3 mb-3">
+        <div class="card-body mt-1">
+          <h5 class="card-title">Customer Name</h5>
+          <p class="card-text"><%= review.comment %></p>
+          <p class="card-text"><%= review.rating %> stars</p>
+        </div>
+        <form
+          class="mb-2"
+          method="POST"
+          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+        >
+          <button class="btn btn-sm btn-dark">Delete</button>
+        </form>
+      </div>
+      <% } %>
+    </div>
   </div>
 </div>
