Phase 2 (Part d) - Passport(Signup, login)

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -28,7 +28,7 @@
 
   <body>
     <%- include("../includes/navbar.ejs") %>
-    <div class="container">
+    <div class="container mt-2">
       <%- include("../includes/flash.ejs") %> 
       <%- body %>
     </div>
