--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 
 <div class="row mt-4">
-  <div class="col-6 offset-3">
+  <div class="col-6 offset-3 mb-2">
     <h3><%= listing.title %></h3>
   </div>
 
@@ -13,15 +13,18 @@
     />
     <div class="card-body">
       <p class="card-text">
-        <%= listing.description %> <br />
-        <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> night <br />
-        <%= listing.location %> <br />
-        <%= listing.country %>
+        <p>Owned by <i><%= listing.owner.username %></i></p>
+        <p class="text-align"><%= listing.description %></p>
+        <p><b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <i style="font-size: 0.75rem;">Per day</i></p>
+        <p><%= listing.location %></p>
+        <p><%= listing.country %></p>
       </p>
     </div>
   </div>
 
-  <br />
+  <br>
+
+ <% if(currUser && listing.owner._id.equals(currUser._id)) { %>
   <div class="btns">
     <a
       href="/listings/<%= listing._id %>/edit"
@@ -33,8 +36,10 @@
       <button class="btn btn-dark offset-4">Delete</button>
     </form>
   </div>
-
+  <% } %>
+  
   <div class="col-6 offset-3">
+    <% if(currUser) { %>
     <hr />
     <h4>Leave a Review</h4>
     <form
@@ -68,14 +73,17 @@
       </div>
       <button class="btn btn-dark">Submit</button>
     </form>
+    <% } %>
+
     <hr />
+
     <p><b>All Reviews</b></p>
     <div class="row">
       <% for(review of listing.reviews) { %>
       <div class="card col-5 ms-3 mb-3">
         <div class="card-body mt-1">
-          <h5 class="card-title">Customer Name</h5>
-          <p class="card-text"><%= review.comment %></p>
+          <h5 class="card-title">@<%= review.author.username %></h5>
+          <p class="card-text text-align"><%= review.comment %></p>
           <p class="card-text"><%= review.rating %> stars</p>
         </div>
         <form
