--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,7 @@
     <h3><%= listing.title %></h3>
   </div>
 
-  <div class="card col-6 offset-3 show-card listing-card">
+  <div class="card col-6 offset-3 show-card delete-border">
     <img
       src="<%= listing.image %>"
       class="card-img-top show-img"
