Router.route, Re-Style Ratings Phase 3 (Part a)

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,13 +24,13 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/css/rating.css" />
   </head>
 
   <body>
     <%- include("../includes/navbar.ejs") %>
     <div class="container mt-2">
-      <%- include("../includes/flash.ejs") %> 
-      <%- body %>
+      <%- include("../includes/flash.ejs") %> <%- body %>
     </div>
     <%- include("../includes/footer.ejs") %>
 
