--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -46,9 +46,9 @@
       action="/listings/<%= listing._id %>/reviews"
       method="POST"
       novalidate
-      class="needs-validation"
-    >
-      <div class="mb-3 mt-3">
+      class="needs-validation">
+      
+      <!-- <div class="mb-3 mt-3">
         <label for="rating" class="form-label">Rating</label>
         <input
           type="range"
@@ -58,7 +58,25 @@
           name="review[rating]"
           class="form-range"
         />
+      </div> -->
+      
+      <div class="mb-3 mt-3">
+        <label for="rating" class="form-label">Rating</label>
+        <fieldset class="starability-slot">
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No   rating." />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
+
       <div>
         <label for="comment" class="form-label">Comments</label>
         <textarea
@@ -80,19 +98,24 @@
     <p><b>All Reviews</b></p>
     <div class="row">
       <% for(review of listing.reviews) { %>
-      <div class="card col-5 ms-3 mb-3">
+      <div class="card col-lg-5 col-md-6 col-sm-12 ms-3 mb-3">
         <div class="card-body mt-1">
-          <h5 class="card-title">@<%= review.author.username %></h5>
-          <p class="card-text text-align"><%= review.comment %></p>
-          <p class="card-text"><%= review.rating %> stars</p>
+          <h5 class="card-title fs-6">@<%= review.author.username %></h5>
+          <div class="d-flex align-items-start">
+            <p class="starability-result" data-rating="<%= review.rating %>"></p>
+          </div>
+          <p class="card-text text-align mb-2"><%= review.comment %></p>
+
+          <% if(currUser && review.author._id.equals(currUser._id)) { %>
+          <form
+            class="mb-2"
+            method="POST"
+            action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+          >
+            <button class="btn btn-sm btn-dark">Delete</button>
+          </form>
+          <% } %>
         </div>
-        <form
-          class="mb-2"
-          method="POST"
-          action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
-        >
-          <button class="btn btn-sm btn-dark">Delete</button>
-        </form>
       </div>
       <% } %>
     </div>
