--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,7 +4,13 @@
   <div class="col-8 offset-2">
     <br /><br />
     <h2>Create a new listings</h2>
-    <form method="POST" action="/listings" novalidate class="needs-validation">
+    <form
+      method="POST"
+      action="/listings"
+      novalidate
+      class="needs-validation"
+      enctype="multipart/form-data"
+    >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
         <input
@@ -33,13 +39,8 @@
       </div>
 
       <div class="mb-3">
-        <label for="image" class="form-label">Image Link</label>
-        <input
-          name="listing[image]"
-          placeholder="Enter image URL/Link"
-          type="text"
-          class="form-control"
-        />
+        <label for="image" class="form-label">Upload Image</label>
+        <input name="listing[image]" type="file" class="form-control" />
       </div>
 
       <div class="row">
