--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,7 +7,7 @@
 
   <div class="card col-6 offset-3 show-card delete-border">
     <img
-      src="<%= listing.image %>"
+      src="<%= listing.image.url %>"
       class="card-img-top show-img"
       alt="listing_image"
     />
