--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -7,7 +7,7 @@
       method="POST"
       action="/listings/<%= listing._id %>/?_method=PUT"
       class="needs-validation"
-      novalidate
+      enctype="multipart/form-data"
     >
       <div class="mb-3">
         <label for="title" class="form-label">Title</label>
@@ -33,14 +33,12 @@
       </div>
 
       <div class="mb-3">
-        <label for="image" class="form-label">Image Link</label>
-        <input
-          name="listing[image]"
-          value="<%= listing.image %>"
-          type="text"
-          class="form-control"
-          required
-        />
+        <img src="<%= originalImageUrl %>" class="img rounded" />
+      </div>
+
+      <div class="mb-3">
+        <label for="image" class="form-label">Upload New Image</label>
+        <input name="listing[image]" type="file" class="form-control" />
       </div>
 
       <div class="row">
