--- a/public/css/style.css
+++ b/public/css/style.css
@@ -149,3 +149,68 @@ body {
   font-size: 1.5rem;
   color: #de0a26;
 }
+
+/* Index Page */
+#filters {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  align-items: center;
+}
+
+.filter {
+  margin: 0 1rem 0 1rem;
+  text-align: center;
+  opacity: 0.7;
+}
+
+.filter:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.filter i {
+  font-size: 1.25rem;
+}
+
+.filter p {
+  font-size: 0.8rem;
+  margin: 0;
+}
+
+.tax-info {
+  display: none;
+}
+
+.tax-toggle {
+  border: 1px solid #000;
+  padding: 0.25rem 0.4rem;
+  border-radius: 0.5rem;
+}
+
+.tax-toggle:hover {
+  border: 1px solid #dee2e6;
+}
+
+/* Nabbar */
+.search-btn {
+  color: #fff;
+  border-radius: 1.5rem;
+  /* padding: 0 1rem 0 1rem; */
+  font-size: 0.9rem;
+}
+
+.search-btn:hover {
+  background-color: #fe424d;
+  color: #fff;
+}
+
+.btn i {
+  display: inline;
+  margin-right: 0.4rem;
+}
+
+.search-input {
+  border-radius: 1.5rem;
+  padding: 0.5rem 3rem 0.5rem 3rem;
+}
