--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,11 +1,67 @@
 <% layout("/layouts/boilerplate") %>
 
-<h2>All Listings</h2>
-<!-- <form method="GET" action="/listings/new">
-            <button>Create New Listings</button>
-</form> -->
+<div id="filters">
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-fire"></i></div>
+    <p>Trending</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-bed"></i></div>
+    <p>Rooms</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-mountain-city"></i></div>
+    <p>Iconic cities</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-mountain"></i></div>
+    <p>Mountain</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-umbrella-beach"></i></div>
+    <p>Beachfront</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-person-swimming"></i></div>
+    <p>Amazing pools</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-campground"></i></div>
+    <p>Camping</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-cow"></i></div>
+    <p>Farms</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-regular fa-snowflake"></i></div>
+    <p>Artic</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-igloo"></i></div>
+    <p>Doms</p>
+  </div>
+  <div class="filter mt-3">
+    <div><i class="fa-solid fa-ship"></i></div>
+    <p>Boats</p>
+  </div>
 
-<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+  <div class="tax-toggle ms-auto">
+    <div class="form-check form-switch form-check-reverse">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        role="switch"
+        id="flexSwitchCheckDefault"
+      />
+      <label class="form-check-label" for="flexSwitchCheckDefault"
+        >Display total after taxes</label
+      >
+    </div>
+  </div>
+</div>
+
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
   <% for(let listing of allListings) { %>
   <a href="/listings/<%= listing._id %>" class="listing-link">
     <div class="card col listing-card">
@@ -19,7 +75,9 @@
       <div class="card-body">
         <p class="card-text">
           <b><%= listing.title %></b> <br />
-          <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> night
+          <b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> for a
+          night
+          <i class="tax-info">&nbsp; &nbsp; + 18% GST</i>
         </p>
       </div>
     </div>
