Minor Bug fixed

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -20,7 +20,7 @@
       <p class="card-text">
         <p>Owned by <i><%= listing.owner.username %></i></p>
         <p class="text-align"><%= listing.description %></p>
-        <p><b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <i style="font-size: 0.75rem;">Per day</i></p>
+        <p><b>&#8377; <%= listing.price.toLocaleString("en-IN") %></b> <i style="font-size: 0.75rem;">for a night</i></p>
         <p><%= listing.location %></p>
         <p><%= listing.country %></p>
       </p>
