--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,7 +3,7 @@
 <div class="row mt-5 col-6 offset-2">
   <h2>Login</h2>
   <div class="">
-    <form action="/login" method="POST" class="needs-validation" novalidate>
+    <form action="/user/login" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="username" class="form-label mb-0">Username</label>
         <input
