--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -32,10 +32,10 @@
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
         <% if(!currUser) { %>
-        <a class="nav-link" href="/signup"><b>Sign Up</b></a>
-        <a class="nav-link" href="/login"><b>Log in</b></a>
+        <a class="nav-link" href="/user/signup"><b>Sign Up</b></a>
+        <a class="nav-link" href="/user/login"><b>Log in</b></a>
         <% } %> <% if(currUser) { %>
-        <a class="nav-link" href="/logout">Logout</a>
+        <a class="nav-link" href="/user/logout">Logout</a>
         <% } %>
       </div>
     </div>
