--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -3,7 +3,7 @@
 <div class="row mt-3 col-6 offset-2">
   <h2>SignUp on Wonderlust</h2>
   <div class="">
-    <form action="/signup" method="POST" class="needs-validation" novalidate>
+    <form action="/user/signup" method="POST" class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="username" class="form-label mb-0">Username</label>
         <input
