--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
+<nav
+  class="navbar navbar-expand-md bg-body-light border-bottom sticky-top mx-2"
+>
   <div class="container-fluid">
-    <a class="navbar-brand" href="/listings"
+    <a class="navbar-brand mt-1" href="/listings"
       ><i class="fa-regular fa-compass"></i
     ></a>
     <button
@@ -8,15 +10,21 @@
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div
+      class="collapse navbar-collapse bg-white p-3 p-md-0"
+      id="navbarNavAltMarkup"
+    >
       <div class="navbar-nav">
         <a class="nav-link" href="/listings">Explore</a>
       </div>
 
-      <div class="navbar nav ms-auto">
+      <div class="navbar-nav ms-auto">
         <form class="d-flex" role="search">
           <input
             class="form-control me-2 search-input"
