--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,6 +1,6 @@
 <% layout("/layouts/boilerplate") %>
 <div class="row mt-5">
-  <div class="col-8 offset-2">
+  <div class="col-11 ps-5 col-md-8 offset-md-2">
     <h2>Edit your listings</h2>
 
     <form
@@ -84,7 +84,7 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
 
-      <button class="btn btn-dark edit-btn mb-3 mt-3">Edit</button>
+      <button class="btn btn-dark edit-btn mb-3 mt-3 px-4">Edit</button>
     </form>
   </div>
 </div>
