--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 
 <div class="row">
-  <div class="col-8 offset-2">
+  <div class="col-11 ps-5 col-md-8 offset-md-2">
     <br /><br />
     <h2>Create a new listings</h2>
     <form
